Started to work no HubAndNodeLauncher.java class and batch files